--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
               <div>
                 <div class="main-subrow ">
-                  <div class=""><span class="inline-flex"><a href="doh/tech.relaycorp.doh/index.html">tech.relaycorp.doh</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1014630508%2FPackages%2F769193423"></span>
+                  <div class=""><span class="inline-flex"><a href="tech.relaycorp.doh/index.html">tech.relaycorp.doh</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1014630508%2FPackages%2F769193423"></span>
                         <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
                       </span></span></div>
                   <div class="pull-right"></div>
