deploy: 1cd4a5d06b01ea99bffa7a32fc1593c92a36af4e

--- a/navigation.html
+++ b/navigation.html
@@ -3,19 +3,19 @@
   <div class="sideMenuPart" id="doh-nav-submenu-0" pageId="doh::tech.relaycorp.doh////PointingToDeclaration//769193423">
     <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;doh-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="tech.relaycorp.doh/index.html"><span>tech.</span><wbr></wbr><span>relaycorp.</span><wbr></wbr><span>doh</span></a></div>
     <div class="sideMenuPart" id="doh-nav-submenu-0-0" pageId="doh::tech.relaycorp.doh/Answer///PointingToDeclaration//769193423">
-      <div class="overview"><a href="tech.relaycorp.doh/-answer/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon class-kt"></span><span class="nav-link-child"><span><span>Answer</span></span></span></span></a></div>
+      <div class="overview"><a href="tech.relaycorp.doh/-answer/index.html"><span><span>Answer</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="doh-nav-submenu-0-1" pageId="doh::tech.relaycorp.doh/DoHClient///PointingToDeclaration//769193423">
-      <div class="overview"><a href="tech.relaycorp.doh/-do-h-client/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon class-kt"></span><span class="nav-link-child"><span>Do</span><wbr></wbr><span><span>HClient</span></span></span></span></a></div>
+      <div class="overview"><a href="tech.relaycorp.doh/-do-h-client/index.html"><span>Do</span><wbr></wbr><span><span>HClient</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="doh-nav-submenu-0-2" pageId="doh::tech.relaycorp.doh/DoHException///PointingToDeclaration//769193423">
-      <div class="overview"><a href="tech.relaycorp.doh/-do-h-exception/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon exception-class"></span><span class="nav-link-child"><span>Do</span><wbr></wbr><span><span>HException</span></span></span></span></a></div>
+      <div class="overview"><a href="tech.relaycorp.doh/-do-h-exception/index.html"><span>Do</span><wbr></wbr><span><span>HException</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="doh-nav-submenu-0-3" pageId="doh::tech.relaycorp.doh/InvalidQueryException///PointingToDeclaration//769193423">
-      <div class="overview"><a href="tech.relaycorp.doh/-invalid-query-exception/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon exception-class"></span><span class="nav-link-child"><span>Invalid</span><wbr></wbr><span>Query</span><wbr></wbr><span><span>Exception</span></span></span></span></a></div>
+      <div class="overview"><a href="tech.relaycorp.doh/-invalid-query-exception/index.html"><span>Invalid</span><wbr></wbr><span>Query</span><wbr></wbr><span><span>Exception</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="doh-nav-submenu-0-4" pageId="doh::tech.relaycorp.doh/LookupFailureException///PointingToDeclaration//769193423">
-      <div class="overview"><a href="tech.relaycorp.doh/-lookup-failure-exception/index.html"><span class="nav-link-grid"><span class="nav-link-child nav-icon exception-class"></span><span class="nav-link-child"><span>Lookup</span><wbr></wbr><span>Failure</span><wbr></wbr><span><span>Exception</span></span></span></span></a></div>
+      <div class="overview"><a href="tech.relaycorp.doh/-lookup-failure-exception/index.html"><span>Lookup</span><wbr></wbr><span>Failure</span><wbr></wbr><span><span>Exception</span></span></a></div>
     </div>
   </div>
 </div>
