deploy: 2cd0b47386306c5f4f1c470f808644e5dbe00a29

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div>
         <div class="main-subrow ">
           <div class=""><span class="inline-flex">
-              <div><a href="tech.relaycorp.doh/index.html">tech.relaycorp.doh</a></div>
+              <div><a href="doh/tech.relaycorp.doh/index.html">tech.relaycorp.doh</a></div>
 <span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1014630508%2FPackages%2F769193423"></span>
                 <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
               </span></span></div>
